hphp/hack/test/typecheck/postfix_parse2.php
<?hh

function f(string $a) {
  $a++;
}
